2010-09-21  Jan Djärv  <jan.h.d@swipnet.se>

	* tool-bar.el (tool-bar-position): New defcustom (Bug#7049).

2010-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/reftex-parse.el (reftex-what-macro)
	(reftex-context-substring): Let-bind forward-sexp-function to nil
	since we don't need/want to treat \begin...\end as a block (bug#7053).

	* emacs-lisp/lisp.el (up-list): Don't do nothing silently.

	* simple.el (blink-matching-open): Use syntax-class.

	* progmodes/pascal.el (pascal-mode): Use define-derived-mode.
	Set invisibility spec for pascal's outline mode.
	(pascal-outline-change): Clean up calling convention.
	(pascal-show-all, pascal-hide-other-defuns): Update callers.

	* progmodes/prolog.el (prolog-smie-forward-token)
	(prolog-smie-backward-token): New functions.
	(prolog-mode-variables): Use them to parse "!," correctly.
	Set up smie-blink-matching for ".".

	* textmodes/ispell.el (ispell-start, ispell-end): Rename from `start'
	and `end'.
	(ispell-region, ispell-process-line): Update users.

	* textmodes/reftex-parse.el (reftex-what-macro): Don't hardcode
	point-min==1.

	* textmodes/ispell.el: Fix commenting convention.
	(ispell-parse-output): Simplify, use push.
	(ispell-region): Use match-string-no-properties.
	(ispell-begin-skip-region-regexp): Use mapconcat to simplify.
	(ispell-minor-mode): Use define-minor-mode.
	(ispell-message): Remove unused var `skip-regexp'.
	(ispell-add-per-file-word-list): Use dynamic let-binding.
	Try and use the proper comment marker.

	* mail/sendmail.el: Fix commenting convention.
	(sendmail-send-it): Use line-beginning-position.

	* help-fns.el (describe-variable): Add original value, if applicable.

2010-09-20  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (y-or-n-p): Remove leftover code from revno 101459.

	* emacs-lisp/smie.el (smie-indent--hanging-p): Use `smie-indent--bolp'.

2010-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>
